Update README.me and file structure

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,10 @@
 platform = atmelavr
 board = uno
 framework = arduino
+src_dir = src/arduino
 
 [env:esp32cam]
 platform = espressif32
 board = esp32cam
 framework = arduino
+src_dir = src/esp32cam
