Update platformio.ini for src subfolder specification

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 platform = atmelavr
 board = uno
 framework = arduino
-src_dir = src/arduino
+build_src_filter = +<uno> -<esp32cam>
 
 [env:esp32cam]
 platform = espressif32
 board = esp32cam
 framework = arduino
-src_dir = src/esp32cam
+build_src_filter = +<esp32cam> -<uno>
