Updated color detection

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,17 +13,20 @@ platform = atmelavr
 board = uno
 framework = arduino
 build_src_filter = +<arduino> -<esp32cam>
+lib_deps = 
+	.\lib\ESP-Color-main.zip
 
 [env:esp32cam]
 platform = espressif32
 board = esp32-s3-devkitc-1
-board_build.arduino.memory_type = dio_opi ;
+board_build.arduino.memory_type = dio_opi
 framework = arduino
 upload_port = COM3
 build_src_filter = +<esp32cam> -<arduino>
 build_flags = 
 	-DARDUINO_USB_CDC_ON_BOOT=1
-    -DBOARD_HAS_PSRAM
+	-DBOARD_HAS_PSRAM
 board_upload.flash_size = 8MB
 lib_deps = 
 	bitbank2/JPEGDEC@^1.7.0
+	.\lib\ESP-Color-main.zip
