--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,12 @@ platform = atmelavr
 board = uno
 framework = arduino
 build_src_filter = +<arduino> -<esp32cam>
-lib_deps = 
-	.\lib\ESP-Color-main.zip
+upload_port = COM5
+lib_deps = fastled/FastLED@^3.9.14
+        arduino-libraries/Servo @ ^1.2.2
+		.\lib\IRremote.zip
+		.\lib\NewPing.zip
+		.\lib\pitches.zip
 
 [env:esp32cam]
 platform = espressif32
@@ -28,5 +32,4 @@ build_flags =
 	-DBOARD_HAS_PSRAM
 board_upload.flash_size = 8MB
 lib_deps = 
-	bitbank2/JPEGDEC@^1.7.0
 	.\lib\ESP-Color-main.zip
